# security-edu

./: .gitignore  .gitmodules  README.md  Taskfile.yml  bootstrap.py  env.example  pyproject.toml
.cursor/rules/: markdown-style-guide.mdc  workflow.mdc
configs/: scenario_config.yaml
data/: DATA_STRUCTURE.md
data_generators/: __init__.py  auth_generator.py  dns_generator.py  firewall_generator.py  generate_parquet.py  nginx_generator.py  scenario_controller.py
grafana/dashboards/: security_overview.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: postgres.yml
lesson01/: README.md  practice.ipynb
lesson01/app/: load_data.py  log_generator.py
lesson02/: README.md  practice.ipynb
lesson02/app/: generate_logs_realtime.py
lesson02/vector-configs/: auth_events.toml  dns_queries.toml  firewall_events.toml  nginx_logs.toml
lesson03/: README.md  practice.ipynb
lesson03/sql/migrations/: 001_create_indexes.sql
lesson04/: ATTACK_PATTERNS.md  README.md  practice.ipynb
lesson05/: README.md  practice.ipynb
lesson06/: README.md  practice.ipynb
lesson07/: README.md
tests/lesson01/: test_data_availability.py
tests/lesson02/: test_vector_config.py
tests/lesson03/: test_storage.py
tests/lesson04/: test_sql_analytics.py
tests/lesson05/: test_python_processing.py
tests/lesson06/: test_grafana_queries.py
