[project]
name = "security-edu"
version = "0.2.0"
description = "Аналитика и аналитическая инфраструктура в сфере информационной безопасности"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.26",
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.37.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["black>=25.12.0", "ruff>=0.14.11"]
